# FileSystem

./: README.md
fileSystem/: CHANGELOG.md  fileSystem.cabal  stack.yaml
fileSystem/FileSystem/: README.md
fileSystem/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
fileSystem/src/: DataConfig.hs  FileManager.hs  FileTreeStructure.hs  IO.hs  IOStringManipulation.hs  IdentificationManager.hs  Main.hs  PathOperations.hs  SystemErrors.hs  SystemStateConfiguration.hs  SystemUsers.hs  TreeOperations.hs  UnixCommands.hs  Utils.hs
