cabal-version:       2.2

name:                fileSystem
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/danielgo26/FileSystem
license:             BSD-3-Clause
license-file:        LICENSE
author:              Daniel Yordanov
maintainer:          example@example.com
copyright:           2024 Daniel Yordanov
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable fileSystem
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       binary >= 0.8.9,
                       bytestring >= 0.11 && < 0.12,
                       directory,
                       ansi-terminal >= 0.10
  other-modules:       TreeOperations,
                       DataConfig,
                       FileManager,
                       FileTreeStructure,
                       IO,
                       IOStringManipulation,
                       IdentificationManager,
                       PathOperations,
                       SystemErrors,
                       SystemStateConfiguration,
                       SystemUsers,
                       UnixCommands,
                       Utils
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints